feat(users): implement getTracks route, controllers with docs
